--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{072298B5-A741-4C93-A580-9DFD4F03979B}</ProjectGuid>
+    <ProjectGuid>{334AA053-98E5-48AB-A77F-41602B82289E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ふぉるってしも！</RootNamespace>
+    <RootNamespace>ふぉるてっしも！</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -29,14 +29,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -71,16 +71,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -93,7 +89,6 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -124,7 +119,6 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -152,53 +146,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Library\Camera.cpp" />
-    <ClCompile Include="Library\Common.cpp" />
-    <ClCompile Include="Library\Counter.cpp" />
-    <ClCompile Include="Library\DebugProcess.cpp" />
-    <ClCompile Include="Library\Direct3D.cpp" />
-    <ClCompile Include="Library\Fade.cpp" />
-    <ClCompile Include="Library\FPSManager.cpp" />
-    <ClCompile Include="Library\Input.cpp" />
-    <ClCompile Include="Library\Light.cpp" />
-    <ClCompile Include="Library\Loading.cpp" />
-    <ClCompile Include="Library\ObjectBase2D.cpp" />
-    <ClCompile Include="Library\ObjectBase3D.cpp" />
-    <ClCompile Include="Library\Polygon.cpp" />
-    <ClCompile Include="Library\Sound.cpp" />
-    <ClCompile Include="Library\Texture.cpp" />
-    <ClCompile Include="Library\TsuLibSystem.cpp" />
-    <ClCompile Include="Library\Vector.cpp" />
-    <ClCompile Include="Library\WindowClass.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Result.cpp" />
-    <ClCompile Include="Title.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Library\Camera.h" />
-    <ClInclude Include="Library\Color.h" />
-    <ClInclude Include="Library\Common.h" />
-    <ClInclude Include="Library\Counter.h" />
-    <ClInclude Include="Library\DebugProcess.h" />
-    <ClInclude Include="Library\Direct3D.h" />
-    <ClInclude Include="Library\Fade.h" />
-    <ClInclude Include="Library\FPSManager.h" />
-    <ClInclude Include="Library\Input.h" />
-    <ClInclude Include="Library\Light.h" />
-    <ClInclude Include="Library\LinkLibrary.h" />
-    <ClInclude Include="Library\Loading.h" />
-    <ClInclude Include="Library\Math.h" />
-    <ClInclude Include="Library\ObjectBase2D.h" />
-    <ClInclude Include="Library\ObjectBase3D.h" />
-    <ClInclude Include="Library\Polygon.h" />
-    <ClInclude Include="Library\Sound.h" />
-    <ClInclude Include="Library\Texture.h" />
-    <ClInclude Include="Library\TsuLibSystem.h" />
-    <ClInclude Include="Library\Vector.h" />
-    <ClInclude Include="Library\WindowClass.h" />
-    <ClInclude Include="Main.h" />
-    <ClInclude Include="Result.h" />
-    <ClInclude Include="Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
