--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Result.cpp" />
     <ClCompile Include="Title.cpp" />
+    <ClCompile Include="workUtsugi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\Camera.h" />
@@ -202,6 +203,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="Result.h" />
     <ClInclude Include="Title.h" />
+    <ClInclude Include="workUtsugi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
