--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -155,7 +155,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\マイクテスト2\HitCheck.cpp" />
+    <ClCompile Include="enemy.cpp" />
+    <ClCompile Include="field.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Library\Camera.cpp" />
     <ClCompile Include="Library\Common.cpp" />
@@ -179,6 +180,7 @@
     <ClCompile Include="Result.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Title.cpp" />
+    <ClCompile Include="voiceten.cpp" />
     <ClCompile Include="workHagiwara.cpp" />
     <ClCompile Include="workKimura.cpp" />
     <ClCompile Include="workSato.cpp" />
@@ -189,7 +191,8 @@
     <ClCompile Include="workYamamoto.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\マイクテスト2\HitCheck.h" />
+    <ClInclude Include="enemy.h" />
+    <ClInclude Include="field.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Library\Camera.h" />
     <ClInclude Include="Library\Color.h" />
@@ -214,6 +217,7 @@
     <ClInclude Include="Result.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Title.h" />
+    <ClInclude Include="voiceten.h" />
     <ClInclude Include="workHagiwara.h" />
     <ClInclude Include="workKimura.h" />
     <ClInclude Include="workSato.h" />
