--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -155,8 +155,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\マイクテスト2\HitCheck.cpp" />
-    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="enemy.cpp" />
+    <ClCompile Include="field.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="Library\Camera.cpp" />
     <ClCompile Include="Library\Common.cpp" />
     <ClCompile Include="Library\Counter.cpp" />
@@ -179,6 +180,7 @@
     <ClCompile Include="Result.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Title.cpp" />
+    <ClCompile Include="voiceten.cpp" />
     <ClCompile Include="workHagiwara.cpp" />
     <ClCompile Include="workKimura.cpp" />
     <ClCompile Include="workSato.cpp" />
@@ -189,8 +191,10 @@
     <ClCompile Include="workYamamoto.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\マイクテスト2\HitCheck.h" />
-    <ClInclude Include="Game.h" />
+    <ClInclude Include="enemy.h" />
+    <ClInclude Include="field.h" />
+    <ClInclude Include="game.h" />
+    <ClInclude Include="voiceten.h" />
     <ClInclude Include="Library\Camera.h" />
     <ClInclude Include="Library\Color.h" />
     <ClInclude Include="Library\Common.h" />
