--- a/ふぉるてっしも！.vcxproj.filters
+++ b/ふぉるてっしも！.vcxproj.filters
@@ -117,11 +117,17 @@
     <ClCompile Include="workYamamoto.cpp">
       <Filter>ソース ファイル\work</Filter>
     </ClCompile>
-    <ClCompile Include="Game.cpp">
+    <ClCompile Include="game.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
-    <ClCompile Include="..\マイクテスト2\HitCheck.cpp">
-      <Filter>Scene</Filter>
+    <ClCompile Include="field.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="enemy.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="voiceten.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -218,11 +224,17 @@
     <ClInclude Include="workYamamoto.h">
       <Filter>ソース ファイル\work</Filter>
     </ClInclude>
-    <ClInclude Include="Game.h">
+    <ClInclude Include="game.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="..\マイクテスト2\HitCheck.h">
-      <Filter>Scene</Filter>
+    <ClInclude Include="enemy.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="field.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="voiceten.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
