--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -18,6 +18,91 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="enemy.cpp" />
+    <ClCompile Include="field.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="HitCheck.cpp" />
+    <ClCompile Include="Library\Camera.cpp" />
+    <ClCompile Include="Library\Common.cpp" />
+    <ClCompile Include="Library\Counter.cpp" />
+    <ClCompile Include="Library\DebugProcess.cpp" />
+    <ClCompile Include="Library\Direct3D.cpp" />
+    <ClCompile Include="Library\Fade.cpp" />
+    <ClCompile Include="Library\FPSManager.cpp" />
+    <ClCompile Include="Library\Input.cpp" />
+    <ClCompile Include="Library\Light.cpp" />
+    <ClCompile Include="Library\Loading.cpp" />
+    <ClCompile Include="Library\Matrix.cpp" />
+    <ClCompile Include="Library\ObjectBase2D.cpp" />
+    <ClCompile Include="Library\ObjectBase3D.cpp" />
+    <ClCompile Include="Library\Polygon.cpp" />
+    <ClCompile Include="Library\Sound.cpp" />
+    <ClCompile Include="Library\Texture.cpp" />
+    <ClCompile Include="Library\TsuLibSystem.cpp" />
+    <ClCompile Include="Library\Vector.cpp" />
+    <ClCompile Include="Library\WindowClass.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ranking.cpp" />
+    <ClCompile Include="Result.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Title.cpp" />
+    <ClCompile Include="voiceten.cpp" />
+    <ClCompile Include="voicetenTest.cpp" />
+    <ClCompile Include="workHagiwara.cpp" />
+    <ClCompile Include="workKimura.cpp" />
+    <ClCompile Include="workSato.cpp" />
+    <ClCompile Include="workSon.cpp" />
+    <ClCompile Include="workTsu.cpp" />
+    <ClCompile Include="workUtsugi.cpp" />
+    <ClCompile Include="workYamaguchi.cpp" />
+    <ClCompile Include="workYamamoto.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="enemy.h" />
+    <ClInclude Include="field.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="HitCheck.h" />
+    <ClInclude Include="Library\Camera.h" />
+    <ClInclude Include="Library\Color.h" />
+    <ClInclude Include="Library\Common.h" />
+    <ClInclude Include="Library\Counter.h" />
+    <ClInclude Include="Library\DebugProcess.h" />
+    <ClInclude Include="Library\Direct3D.h" />
+    <ClInclude Include="Library\Fade.h" />
+    <ClInclude Include="Library\FPSManager.h" />
+    <ClInclude Include="Library\Input.h" />
+    <ClInclude Include="Library\Light.h" />
+    <ClInclude Include="Library\Loading.h" />
+    <ClInclude Include="Library\Math.h" />
+    <ClInclude Include="Library\Matrix.h" />
+    <ClInclude Include="Library\ObjectBase2D.h" />
+    <ClInclude Include="Library\ObjectBase3D.h" />
+    <ClInclude Include="Library\Polygon.h" />
+    <ClInclude Include="Library\Sound.h" />
+    <ClInclude Include="Library\Texture.h" />
+    <ClInclude Include="Library\TsuLibSystem.h" />
+    <ClInclude Include="Library\Vector.h" />
+    <ClInclude Include="Library\WindowClass.h" />
+    <ClInclude Include="ranking.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Result.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Title.h" />
+    <ClInclude Include="voiceten.h" />
+    <ClInclude Include="voicetenTest.h" />
+    <ClInclude Include="workHagiwara.h" />
+    <ClInclude Include="workKimura.h" />
+    <ClInclude Include="workSato.h" />
+    <ClInclude Include="workSon.h" />
+    <ClInclude Include="workTsu.h" />
+    <ClInclude Include="workUtsugi.h" />
+    <ClInclude Include="workYamaguchi.h" />
+    <ClInclude Include="workYamamoto.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Icon.ico" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{334AA053-98E5-48AB-A77F-41602B82289E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -159,85 +244,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="enemy.cpp" />
-    <ClCompile Include="field.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="HitCheck.cpp" />
-    <ClCompile Include="Library\Camera.cpp" />
-    <ClCompile Include="Library\Common.cpp" />
-    <ClCompile Include="Library\Counter.cpp" />
-    <ClCompile Include="Library\DebugProcess.cpp" />
-    <ClCompile Include="Library\Direct3D.cpp" />
-    <ClCompile Include="Library\Fade.cpp" />
-    <ClCompile Include="Library\FPSManager.cpp" />
-    <ClCompile Include="Library\Input.cpp" />
-    <ClCompile Include="Library\Light.cpp" />
-    <ClCompile Include="Library\Loading.cpp" />
-    <ClCompile Include="Library\ObjectBase2D.cpp" />
-    <ClCompile Include="Library\ObjectBase3D.cpp" />
-    <ClCompile Include="Library\Polygon.cpp" />
-    <ClCompile Include="Library\Sound.cpp" />
-    <ClCompile Include="Library\Texture.cpp" />
-    <ClCompile Include="Library\TsuLibSystem.cpp" />
-    <ClCompile Include="Library\Vector.cpp" />
-    <ClCompile Include="Library\WindowClass.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="ranking.cpp" />
-    <ClCompile Include="Result.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="Title.cpp" />
-    <ClCompile Include="voiceten.cpp" />
-    <ClCompile Include="voicetenTest.cpp" />
-    <ClCompile Include="workHagiwara.cpp" />
-    <ClCompile Include="workKimura.cpp" />
-    <ClCompile Include="workSato.cpp" />
-    <ClCompile Include="workSon.cpp" />
-    <ClCompile Include="workTsu.cpp" />
-    <ClCompile Include="workUtsugi.cpp" />
-    <ClCompile Include="workYamaguchi.cpp" />
-    <ClCompile Include="workYamamoto.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="enemy.h" />
-    <ClInclude Include="field.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="HitCheck.h" />
-    <ClInclude Include="Library\Camera.h" />
-    <ClInclude Include="Library\Color.h" />
-    <ClInclude Include="Library\Common.h" />
-    <ClInclude Include="Library\Counter.h" />
-    <ClInclude Include="Library\DebugProcess.h" />
-    <ClInclude Include="Library\Direct3D.h" />
-    <ClInclude Include="Library\Fade.h" />
-    <ClInclude Include="Library\FPSManager.h" />
-    <ClInclude Include="Library\Input.h" />
-    <ClInclude Include="Library\Light.h" />
-    <ClInclude Include="Library\Loading.h" />
-    <ClInclude Include="Library\Math.h" />
-    <ClInclude Include="Library\ObjectBase2D.h" />
-    <ClInclude Include="Library\ObjectBase3D.h" />
-    <ClInclude Include="Library\Polygon.h" />
-    <ClInclude Include="Library\Sound.h" />
-    <ClInclude Include="Library\Texture.h" />
-    <ClInclude Include="Library\TsuLibSystem.h" />
-    <ClInclude Include="Library\Vector.h" />
-    <ClInclude Include="Library\WindowClass.h" />
-    <ClInclude Include="ranking.h" />
-    <ClInclude Include="Result.h" />
-    <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="Title.h" />
-    <ClInclude Include="voiceten.h" />
-    <ClInclude Include="voicetenTest.h" />
-    <ClInclude Include="workHagiwara.h" />
-    <ClInclude Include="workKimura.h" />
-    <ClInclude Include="workSato.h" />
-    <ClInclude Include="workSon.h" />
-    <ClInclude Include="workTsu.h" />
-    <ClInclude Include="workUtsugi.h" />
-    <ClInclude Include="workYamaguchi.h" />
-    <ClInclude Include="workYamamoto.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
