--- a/ふぉるてっしも！.vcxproj
+++ b/ふぉるてっしも！.vcxproj
@@ -48,6 +48,7 @@
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="timer.cpp" />
     <ClCompile Include="Title.cpp" />
+    <ClCompile Include="titlelogo.cpp" />
     <ClCompile Include="voiceten.cpp" />
     <ClCompile Include="voicetenTest.cpp" />
     <ClCompile Include="workHagiwara.cpp" />
@@ -91,6 +92,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="Title.h" />
+    <ClInclude Include="titlelogo.h" />
     <ClInclude Include="voiceten.h" />
     <ClInclude Include="voicetenTest.h" />
     <ClInclude Include="workHagiwara.h" />
