--- a/ふぉるてっしも！.vcxproj.filters
+++ b/ふぉるてっしも！.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="field.cpp">
       <Filter>ソース ファイル\Game</Filter>
     </ClCompile>
+    <ClCompile Include="ranking.cpp">
+      <Filter>ソース ファイル\Game</Filter>
+    </ClCompile>
     <ClCompile Include="Result.cpp">
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
@@ -179,18 +182,6 @@
     </ClCompile>
     <ClCompile Include="GamePause.cpp">
       <Filter>ソース ファイル\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Resultlogo.cpp">
-      <Filter>ソース ファイル\Result</Filter>
-    </ClCompile>
-    <ClCompile Include="enemyRE.cpp">
-      <Filter>ソース ファイル\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="saveranking.cpp">
-      <Filter>ソース ファイル\Game</Filter>
-    </ClCompile>
-    <ClCompile Include="Ranking.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -293,6 +284,9 @@
     <ClInclude Include="field.h">
       <Filter>ソース ファイル\Game</Filter>
     </ClInclude>
+    <ClInclude Include="ranking.h">
+      <Filter>ソース ファイル\Game</Filter>
+    </ClInclude>
     <ClInclude Include="Result.h">
       <Filter>ソース ファイル\Scene</Filter>
     </ClInclude>
@@ -346,18 +340,6 @@
     </ClInclude>
     <ClInclude Include="GamePause.h">
       <Filter>ソース ファイル\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Resultlogo.h">
-      <Filter>ソース ファイル\Result</Filter>
-    </ClInclude>
-    <ClInclude Include="enemyRE.h">
-      <Filter>ソース ファイル\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="saveranking.h">
-      <Filter>ソース ファイル\Game</Filter>
-    </ClInclude>
-    <ClInclude Include="Ranking.h">
-      <Filter>ソース ファイル\Scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
